k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: securekiosk-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "15m"
spec:
  rules:
  - host: securekiosk.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: securekiosk-service
            port:
              number: 8000
